@@ -6,7 +6,6 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.util.ArrayList;
@@ -14,67 +13,59 @@ import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 
 public class OrderCreateServlet extends HttpServlet {
-
-    private List<Order> orderList;
-    private AtomicInteger orderIdGenerator;
-
     @Override
     public void init(ServletConfig config) throws ServletException {
         super.init(config);
-
         synchronized (getServletContext()) {
-            // 强制每次启动都清空数据，彻底解决本地/ GitHub 不一致问题
-            getServletContext().setAttribute("orderList", new ArrayList<Order>());
-            getServletContext().setAttribute("orderIdGenerator", new AtomicInteger(1002));
-
-            orderList = (List<Order>) getServletContext().getAttribute("orderList");
-            orderIdGenerator = (AtomicInteger) getServletContext().getAttribute("orderIdGenerator");
+            if (getServletContext().getAttribute("orderIdGenerator") == null) {
+                getServletContext().setAttribute("orderIdGenerator", new AtomicInteger(1001));
+            }
+            if (getServletContext().getAttribute("orderList") == null) {
+                getServletContext().setAttribute("orderList", new ArrayList<Order>());
+            }
         }
     }
 
     @Override
-    protected void doPost(HttpServletRequest req, HttpServletResponse resp)
-            throws ServletException, IOException {
-        resp.setContentType("text/plain; charset=UTF-8");
-        req.setCharacterEncoding("UTF-8");
+    protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws IOException {
+        resp.setContentType("text/plain;charset=UTF-8");
         PrintWriter out = resp.getWriter();
 
         String customer = req.getParameter("customer");
         String food = req.getParameter("food");
         String quantityStr = req.getParameter("quantity");
 
-        if (customer == null || customer.trim().isEmpty()
-                || food == null || food.trim().isEmpty()
-                || quantityStr == null || quantityStr.trim().isEmpty()) {
-            resp.setStatus(HttpServletResponse.SC_BAD_REQUEST);
+        // 参数校验
+        if (customer == null || food == null || quantityStr == null || customer.isBlank() || food.isBlank() || quantityStr.isBlank()) {
+            resp.setStatus(400);
             out.println("Error: missing parameter (customer/food/quantity)");
+            out.flush();
             return;
         }
 
         int quantity;
         try {
             quantity = Integer.parseInt(quantityStr);
-            if (quantity <= 0) {
-                resp.setStatus(HttpServletResponse.SC_BAD_REQUEST);
-                out.println("Error: quantity must be a valid number");
-                return;
-            }
-        } catch (NumberFormatException e) {
-            resp.setStatus(HttpServletResponse.SC_BAD_REQUEST);
+            if (quantity <= 0) throw new Exception();
+        } catch (Exception e) {
+            resp.setStatus(400);
             out.println("Error: quantity must be a valid number");
+            out.flush();
             return;
         }
 
-        int orderId = orderIdGenerator.getAndIncrement();
-        Order newOrder = new Order(orderId, customer.trim(), food.trim(), quantity);
+        // 全局上下文读写
+        AtomicInteger generator = (AtomicInteger) getServletContext().getAttribute("orderIdGenerator");
+        List<Order> list = (List<Order>) getServletContext().getAttribute("orderList");
+        int id = generator.getAndIncrement();
+        list.add(new Order(id, customer.trim(), food.trim(), quantity));
 
-        synchronized (orderList) {
-            orderList.add(newOrder);
-        }
+        // 强制更新上下文
+        getServletContext().setAttribute("orderIdGenerator", generator);
+        getServletContext().setAttribute("orderList", list);
 
-        getServletContext().setAttribute("orderList", orderList);
-
-        out.printf("Order Created: %d\n", orderId);
+        // 严格输出
+        out.println("Order Created: " + id);
         out.flush();
     }
 }
